--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ owner:
   foursquare: mr_foto
   youtube: miharek
   soundcloud: mr-foto
+  speakerdeck: mrfoto
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
