Pretty permalinks, get rid of page folders

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://mr.si
 
 # Jekyll configuration
 
-permalink:   /:categories/:title/
+permalink:   pretty
 markdown:    kramdown
 sass:
   sass_dir: _sass
