--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ markdown:    kramdown
 sass:
   sass_dir: _sass
   style: compressed
-gems:
+plugins:
   - jekyll-mentions
   - jemoji
   - jekyll-redirect-from
