--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
   bing-verify:
   github: mrfoto
   stackoverflow: 527840/miha-rekar
-  linkedin: mrfoto
+  linkedin: miha-rekar
   instagram: mr_foto
   foursquare: mr_foto
   youtube: miharek
