--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ kramdown:
 owner:
   name: Miha Rekar
   avatar: miha-rekar.jpg
-  email: miha.rekar@gmail.com
+  email: info@mr.si
   disqus-shortname: miharekar
-  twitter: mr_foto
+  twitter: MihaRekar
   facebook: rekar
   google:
     analytics: UA-356422-1
@@ -42,9 +42,9 @@ owner:
   github: mrfoto
   stackoverflow: 527840/miha-rekar
   linkedin: miha-rekar
-  instagram: mr_foto
+  instagram: MihaRekar
   foursquare: mr_foto
-  youtube: miharek
+  youtube: MihaRekar
   soundcloud: mr-foto
   speakerdeck: mrfoto
 
