--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ owner:
     ad-client:
     ad-slot:
   bing-verify:
-  github: mrfoto
+  github: miharekar
   stackoverflow: 527840/miha-rekar
   linkedin: miha-rekar
   instagram: MihaRekar
